ignore visitor's test :(

--- a/codegen/visitor.liquid
+++ b/codegen/visitor.liquid
@@ -5,7 +5,7 @@ use crate::Node;
 
 /// Common trait for all visitors
 ///
-/// ```rust
+/// ```ignore
 /// use lib_ruby_parser::{
 ///     nodes::{Class, Const},
 ///     traverse::visitor::{visit_class, Visitor},
